# snake_online

./: .gitignore  AGENTS.md  README.md
client/: Cargo.toml
client/src/: bottombar.rs  buffer.rs  main.rs  milestones.rs  net.rs  sprites.rs  theme.rs  topbar.rs  ui.rs  ui_menu.rs  ui_neon.rs  ui_overlays.rs  ui_scoreboard.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs  model.rs  room.rs
